k8s/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-dep
  namespace: flower-ns 
spec:
  replicas: 2

  selector:
    matchLabels:
      app: flower-app
  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  
  template:
    
    metadata:
      labels:
        app: flower-app
    spec:
      containers:
        - name: flower-container
          image: aravindroy1/flow_practice:v1.0.0
          ports:
            - containerPort: 3015
