k8s/back_end_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-dep
  namespace: flower-ns
spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongo-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mongo-app
    spec:
      containers:
        - name: mongo-container
          image: mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: flower-mongo-svc
  namespace: flower-ns
spec:
  selector:
    app: mongo-app
  ports:
    - port: 27017
      targetPort: 27017
