k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flower-svc
  namespace: flower-ns
spec:
  type: ClusterIP
  selector:
    app: flower-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3015
